Initial update html page

--- a/home.html
+++ b/home.html
@@ -45,6 +45,12 @@
             </span>
         </div>
     </div>
+    <div class="about-section">
+        <h2>About me</h2>
+        <div class="about-title">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est aspernatur molestias aut nobis id reprehenderit sapiente temporibus atque, soluta praesentium incidunt. Debitis quo impedit optio similique sequi. Nesciunt, et laborum?</p>
+        </div>
+    </div>
 </body>
 
 </html>
