create skill & contact section usging html

--- a/home.html
+++ b/home.html
@@ -29,27 +29,32 @@
             </p>
             <button>See Project</button><button>Contact me</button>
         </div>
+        <div class="image">
+            <img src="https://i.pinimg.com/736x/9f/9d/ed/9f9ded3b0dd6794036eff48c79e6e040.jpg" alt="">
+        </div>
     </section>
     <section class="about-section" id="about">
-        <h1>About me</h1>
-        <p>
-            Hi, I’m Vansh, a passionate frontend web developer who loves building
-            clean, responsive, and user-friendly websites.
-        </p>
-        <p>
-            I specialize in creating modern web interfaces using HTML, CSS,
-            JavaScript, Bootstrap, and React. I enjoy turning ideas into real-world
-            websites and continuously learning new technologies to improve my
-            skills.
-        </p>
+
     </section>
     <section class="skill-section" id="skills">
         <h1 id="skill">Skill</h1>
-        <div class="skill">HTML</div>
-        <div class="skill">CSS</div>
-        <div class="skill">JavaScript</div>
-        <div class="skill">Bootstrap</div>
-        <div class="skill">React</div>
+        <div class="slill-icon">
+            <span class="skill">
+                <img src="https://i.pinimg.com/736x/ca/e1/b4/cae1b4f6b223fe5a7bb712b680cffa67.jpg" alt="">
+            </span>
+            <span class="skill">
+                <img src="https://i.pinimg.com/736x/fc/da/ff/fcdaff4d3f30005e462d0d3c31cfb691.jpg" alt="">
+            </span>
+            <span class="skill"><img src="https://i.pinimg.com/736x/37/fc/63/37fc630b338d68d18b5fe5fde855562e.jpg"
+                    alt=""></span>
+            <span class="skill"><img src="https://i.pinimg.com/736x/28/55/4d/28554d154d62417398fdc9b062464263.jpg"
+                    alt=""></span>
+            <span class="skill"><img src="https://i.pinimg.com/736x/8d/fe/0a/8dfe0a99a74efbec4af0d8e440c00282.jpg"
+                    alt=""></span>
+            <span class="skill"><img src="https://i.pinimg.com/1200x/4c/f0/75/4cf07530eacf04942c8a4b90db131cde.jpg"
+                    alt=""></span>
+        </div>
+
     </section>
     <section class="project-section" id="projects">
         <h1>Project</h1>
@@ -79,7 +84,7 @@
         <h1>Contact me</h1>
         <form>
             <p>Name</p>
-            <input type="text"  id="name" placeholder="type your name">
+            <input type="text" id="name" placeholder="type your name">
             <p>Email</p>
             <input type="email" id="email" placeholder="enter your email">
             <p>message</p>
