--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern Portfolio</title>
+    <title>Vansh | Web Developer</title>
     <link rel="stylesheet" href="home.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
@@ -80,19 +80,50 @@
         </div>
 
     </section>
-    <section class="footer" id="contact">
-        <h1>Contact me</h1>
-        <form>
-            <p>Name</p>
-            <input type="text" id="name" placeholder="type your name">
-            <p>Email</p>
-            <input type="email" id="email" placeholder="enter your email">
-            <p>message</p>
-            <input type="text" id="message">
-        </form>
-    </section>
+<section class="footer-section" id="contact">
+  <div class="footer-container">
+
+    <!-- LEFT SIDE -->
+    <div class="footer-left">
+      <h2>Vansh Verma</h2>
+      <p class="role">Frontend Web Developer</p>
+
+      <p class="desc">
+        I’m a passionate web developer specializing in building modern,
+        responsive, and user-friendly websites. I help individuals and
+        businesses turn their ideas into high-quality digital experiences.
+      </p>
+
+      <div class="footer-details">
+        <p><strong>Email:</strong> vanshverma.dev@gmail.com</p>
+        <p><strong>Location:</strong> India (Remote Available)</p>
+        <p><strong>Availability:</strong> Open for Freelance & Projects</p>
+      </div>
+
+      <div class="social-icons">
+        <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
+
+    <!-- RIGHT SIDE -->
+    <div class="footer-right">
+      <h2>Get In Touch</h2>
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Tell me about your project..." required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+
+  </div>
+</section>
+
     <footer>
-        <p>© 2026 Vansh Verma </p>
+        <p>© 2026 Vansh Verma. All Rights Reserved.</p>
     </footer>
 </body>
 
