create contact section

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         </div>
     </section>
     <section class="about-section" id="about">
-
+ <img src="https://i.pinimg.com/1200x/be/3d/ba/be3dba31d449f0ba9c00ab8f9e2d603f.jpg" alt="">
     </section>
     <section class="skill-section" id="skills">
         <h1 id="skill">Skill</h1>
