--- a/home.html
+++ b/home.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vansh | Web Developer</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 
 <body>
     <nav class="navbar">
-        <div class="logo">My<span>Portfolio</span></div>
+        <div class="logo">Vansh<span>Verma</span></div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -27,15 +27,40 @@
             <p>
                 Building interactive web applications with clean and optimized code.
             </p>
-            <button>See Project</button><button>Contact me</button>
+             <a href="#projectbtn">See Project</a> <a href="#hireme">Hire me</a>
         </div>
         <div class="image">
             <img src="https://i.pinimg.com/736x/9f/9d/ed/9f9ded3b0dd6794036eff48c79e6e040.jpg" alt="">
         </div>
     </section>
-    <section class="about-section" id="about">
- <img src="https://i.pinimg.com/1200x/be/3d/ba/be3dba31d449f0ba9c00ab8f9e2d603f.jpg" alt="">
-    </section>
+   <section class="about-section" id="about">
+  <div class="images">
+    <img src="https://i.pinimg.com/1200x/be/3d/ba/be3dba31d449f0ba9c00ab8f9e2d603f.jpg" alt="Vansh Web Developer">
+  </div>
+
+  <div class="about-content">
+    <h2>About Me</h2>
+
+    <p>
+      I’m Vansh, a passionate frontend web developer focused on building clean,
+      responsive, and user-friendly web experiences.
+    </p>
+
+    <p>
+      I work with HTML, CSS, JavaScript, Bootstrap, and React to create modern
+      websites that help individuals and businesses grow online.
+    </p>
+
+    <p>
+      Currently open to freelance projects, collaborations, and job opportunities.
+    </p>
+
+    <a href="resume.pdf" target="_blank" class="cv-btn">
+      <i class="fa-solid fa-download"></i> View My CV
+    </a>
+  </div>
+</section>
+
     <section class="skill-section" id="skills">
         <h1 id="skill">Skill</h1>
         <div class="slill-icon">
@@ -57,25 +82,25 @@
 
     </section>
     <section class="project-section" id="projects">
-        <h1>Project</h1>
+        <h1 id="projectbtn">Project</h1>
         <div class="project-scroll">
             <div class="card">
                 <img src="https://i.pinimg.com/1200x/f5/13/f3/f513f3b83ddd32fa05f39370758ad0ec.jpg" alt="" />
-                <h3>Portfolio</h3>
+                <h3>TrueBook</h3>
                 <p>
                     this is a new project using html css js ialize in creating modern
                     web interfaces using HTML CSS javascript
                 </p>
-                <button>View Project</button>
+                <button >View Project</button>
             </div>
             <div class="card">
                 <img src="https://i.pinimg.com/1200x/f5/13/f3/f513f3b83ddd32fa05f39370758ad0ec.jpg" alt="" />
-                <h3>Portfolio</h3>
+                <h3>E-Commerce</h3>
                 <p>
                     this is a new project using html css js ialize in creating modern
                     web interfaces using HTML CSS javascript
                 </p>
-                <button>View Project</button>
+                <button >View Project</button>
             </div>
         </div>
 
@@ -95,15 +120,15 @@
       </p>
 
       <div class="footer-details">
-        <p><strong>Email:</strong> vanshverma.dev@gmail.com</p>
-        <p><strong>Location:</strong> India (Remote Available)</p>
+        <p><strong>Email:</strong>vanshverma6065@gmail.com</p>
+        <p><strong>Location:</strong> India (Meerut)</p>
         <p><strong>Availability:</strong> Open for Freelance & Projects</p>
       </div>
 
       <div class="social-icons">
-        <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/dashboard" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/feed/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href=" https://www.instagram.com/igvanshverma" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
       </div>
     </div>
@@ -126,5 +151,5 @@
         <p>© 2026 Vansh Verma. All Rights Reserved.</p>
     </footer>
 </body>
-
+<script src="../home.js"></script>
 </html>
