Final portfolio release

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
             <p>
                 Building interactive web applications with clean and optimized code.
             </p>
-             <a href="#projectbtn">See Project</a> <a href="#hireme">Hire me</a>
+             <a href="#projectbtn">See Project</a> <a href="#hire">Let’s Work Together</a>
         </div>
         <div class="image">
             <img src="https://i.pinimg.com/736x/9f/9d/ed/9f9ded3b0dd6794036eff48c79e6e040.jpg" alt="">
@@ -55,8 +55,8 @@
       Currently open to freelance projects, collaborations, and job opportunities.
     </p>
 
-    <a href="resume.pdf" target="_blank" class="cv-btn">
-      <i class="fa-solid fa-download"></i> View My CV
+    <a href="../assits/resume.pdf" class="cv-btn" download>
+      <i class="fa-solid fa-download"></i> Download CV
     </a>
   </div>
 </section>
@@ -85,11 +85,10 @@
         <h1 id="projectbtn">Project</h1>
         <div class="project-scroll">
             <div class="card">
-                <img src="https://i.pinimg.com/1200x/f5/13/f3/f513f3b83ddd32fa05f39370758ad0ec.jpg" alt="" />
+                <img src="https://i.pinimg.com/736x/99/d7/5e/99d75ec87caffa41d08e60999cdd01bd.jpg" alt="" />
                 <h3>TrueBook</h3>
                 <p>
-                    this is a new project using html css js ialize in creating modern
-                    web interfaces using HTML CSS javascript
+                    An accounting-focused web application built to simplify bookkeeping, transaction management, and financial tracking for small businesses.
                 </p>
                 <button >View Project</button>
             </div>
@@ -97,8 +96,7 @@
                 <img src="https://i.pinimg.com/1200x/f5/13/f3/f513f3b83ddd32fa05f39370758ad0ec.jpg" alt="" />
                 <h3>E-Commerce</h3>
                 <p>
-                    this is a new project using html css js ialize in creating modern
-                    web interfaces using HTML CSS javascript
+                  A fully responsive e-commerce website designed with a clean interface, optimized layout, and user-friendly shopping experience.
                 </p>
                 <button >View Project</button>
             </div>
@@ -135,7 +133,7 @@
 
     <!-- RIGHT SIDE -->
     <div class="footer-right">
-      <h2>Get In Touch</h2>
+      <h2 id="hire">Get In Touch</h2>
       <form class="contact-form">
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
