add button click function

--- a/home.html
+++ b/home.html
@@ -61,36 +61,57 @@
   </div>
 </section>
 
-    <section class="skill-section" id="skills">
-        <h1 id="skill">Skill</h1>
-        <div class="slill-icon">
-            <span class="skill">
-                <img src="https://i.pinimg.com/736x/ca/e1/b4/cae1b4f6b223fe5a7bb712b680cffa67.jpg" alt="">
-            </span>
-            <span class="skill">
-                <img src="https://i.pinimg.com/736x/fc/da/ff/fcdaff4d3f30005e462d0d3c31cfb691.jpg" alt="">
-            </span>
-            <span class="skill"><img src="https://i.pinimg.com/736x/37/fc/63/37fc630b338d68d18b5fe5fde855562e.jpg"
-                    alt=""></span>
-            <span class="skill"><img src="https://i.pinimg.com/736x/28/55/4d/28554d154d62417398fdc9b062464263.jpg"
-                    alt=""></span>
-            <span class="skill"><img src="https://i.pinimg.com/736x/8d/fe/0a/8dfe0a99a74efbec4af0d8e440c00282.jpg"
-                    alt=""></span>
-            <span class="skill"><img src="https://i.pinimg.com/1200x/4c/f0/75/4cf07530eacf04942c8a4b90db131cde.jpg"
-                    alt=""></span>
-        </div>
+   <section class="skills-section" id="skills">
+  <h2 class="skills-heading">Skills & Tools</h2>
 
-    </section>
+  <div class="skills-grid">
+    <div class="skills-scroll">
+  <div class="skills-grid scroll">
+  <div class="skill-box">
+      <img src="https://i.pinimg.com/736x/c5/73/ff/c573ff5552d6da9a1d28ec4e27cd1445.jpg" />
+      <span>HTML</span>
+    </div>
+
+    <div class="skill-box">
+      <img src="https://i.pinimg.com/736x/ee/b3/5d/eeb35df1a6739f4cea43ed1cba70bc25.jpg " />
+      <span>CSS</span>
+    </div>
+
+    <div class="skill-box">
+      <img src=" https://i.pinimg.com/1200x/b6/ab/52/b6ab52333dd3effe49adf85e8179155a.jpg" />
+      <span>JavaScript</span>
+    </div>
+
+     <div class="skill-box">
+      <img src="https://i.pinimg.com/736x/74/f4/b2/74f4b2fe5a9d18a8b1b43db588dc35a0.jpg" />
+      <span>React</span>
+    </div>
+
+    <div class="skill-box">
+      <img src="https://i.pinimg.com/1200x/92/d6/60/92d660adb69ff63b4d133cda9592d848.jpg" />
+      <span>Bootstrap</span>
+    </div>
+    <div class="skill-box">
+      <img src=" https://i.pinimg.com/736x/cd/00/4b/cd004b701e51ee32dd3225b910575320.jpg" />
+      <span>Tailiwind CSS</span>
+  </div>
+</div>
+   
+    </div>
+  </div>
+</section>
+
     <section class="project-section" id="projects">
         <h1 id="projectbtn">Project</h1>
         <div class="project-scroll">
             <div class="card">
-                <img src="https://i.pinimg.com/736x/99/d7/5e/99d75ec87caffa41d08e60999cdd01bd.jpg" alt="" />
-                <h3>TrueBook</h3>
+                <img src="assits/ChatGPT Image Jan 16, 2026, 06_48_16 PM.png" alt="" />
+                <h3>VOGUE – Luxury Women’s Fashion UI</h3>
                 <p>
-                    An accounting-focused web application built to simplify bookkeeping, transaction management, and financial tracking for small businesses.
+                   A premium fashion website UI showcasing modern layouts, elegant design, and responsive user experience for women’s luxury clothing.
                 </p>
-                <button >View Project</button>
+                <a href=" https://vansh-verma-dev.github.io/vogue-fashion-vansh/" target="_blank"> <button >View Project</button></a>
+               
             </div>
             <div class="card">
                 <img src="https://i.pinimg.com/1200x/f5/13/f3/f513f3b83ddd32fa05f39370758ad0ec.jpg" alt="" />
@@ -135,9 +156,9 @@
     <div class="footer-right">
       <h2 id="hire">Get In Touch</h2>
       <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Tell me about your project..." required></textarea>
+        <input type="text" placeholder="Your Name" required id="input">
+        <input type="email" placeholder="Your Email" required id="email">
+        <textarea placeholder="Tell me about your project..." required id="msg"></textarea>
         <button type="submit">Send Message</button>
       </form>
     </div>
