initial update skill ui & ux desgin

--- a/index.html
+++ b/index.html
@@ -61,46 +61,18 @@
   </div>
 </section>
 
-   <section class="skills-section" id="skills">
-  <h2 class="skills-heading">Skills & Tools</h2>
-
-  <div class="skills-grid">
-    <div class="skills-scroll">
-  <div class="skills-grid scroll">
-  <div class="skill-box">
-      <img src="https://i.pinimg.com/736x/c5/73/ff/c573ff5552d6da9a1d28ec4e27cd1445.jpg" />
-      <span>HTML</span>
-    </div>
-
-    <div class="skill-box">
-      <img src="https://i.pinimg.com/736x/ee/b3/5d/eeb35df1a6739f4cea43ed1cba70bc25.jpg " />
-      <span>CSS</span>
-    </div>
-
-    <div class="skill-box">
-      <img src=" https://i.pinimg.com/1200x/b6/ab/52/b6ab52333dd3effe49adf85e8179155a.jpg" />
-      <span>JavaScript</span>
-    </div>
-
-     <div class="skill-box">
-      <img src="https://i.pinimg.com/736x/74/f4/b2/74f4b2fe5a9d18a8b1b43db588dc35a0.jpg" />
-      <span>React</span>
-    </div>
-
-    <div class="skill-box">
-      <img src="https://i.pinimg.com/1200x/92/d6/60/92d660adb69ff63b4d133cda9592d848.jpg" />
-      <span>Bootstrap</span>
-    </div>
-    <div class="skill-box">
-      <img src=" https://i.pinimg.com/736x/cd/00/4b/cd004b701e51ee32dd3225b910575320.jpg" />
-      <span>Tailiwind CSS</span>
+<section id="skills">
+  <div class="section-title">
+    <h3>Skills</h3>
   </div>
-</div>
-   
-    </div>
+  <div class="skills-grid">
+    <div class="skill"><i class="fab fa-html5"></i><h4>HTML</h4><p>Semantic & SEO friendly structure</p></div>
+    <div class="skill"><i class="fab fa-css3-alt"></i><h4>CSS</h4><p>Modern layouts, animations</p></div>
+    <div class="skill"><i class="fab fa-js"></i><h4>JavaScript</h4><p>Interactive & dynamic UI</p></div>
+    <div class="skill"><i class="fab fa-react"></i><h4>React</h4><p>Component based architecture</p></div>
+     <div class="skill"><i class="fa-brands fa-bootstrap"></i><h4>Bootstrap</h4><p>Database management</p></div>
   </div>
 </section>
-
     <section class="project-section" id="projects">
         <h1 id="projectbtn">Project</h1>
         <div class="project-scroll">
