--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
   </div>
 </section>
 
-<section id="skills">
-  <div class="section-title">
-    <h3>Skills</h3>
+<section id="skills" class="skill-section">
+    <h3 class="skill-h3">Skills</h3>
   </div>
   <div class="skills-grid">
     <div class="skill"><i class="fab fa-html5"></i><h4>HTML</h4><p>Semantic & SEO friendly structure</p></div>
@@ -71,7 +70,6 @@
     <div class="skill"><i class="fab fa-js"></i><h4>JavaScript</h4><p>Interactive & dynamic UI</p></div>
     <div class="skill"><i class="fab fa-react"></i><h4>React</h4><p>Component based architecture</p></div>
      <div class="skill"><i class="fa-brands fa-bootstrap"></i><h4>Bootstrap</h4><p>Database management</p></div>
-  </div>
 </section>
     <section class="project-section" id="projects">
         <h1 id="projectbtn">Project</h1>
