--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <div class="skill"><i class="fab fa-css3-alt"></i><h4>CSS</h4><p>Modern layouts, animations</p></div>
     <div class="skill"><i class="fab fa-js"></i><h4>JavaScript</h4><p>Interactive & dynamic UI</p></div>
     <div class="skill"><i class="fab fa-react"></i><h4>React</h4><p>Component based architecture</p></div>
-     <div class="skill"><i class="fa-brands fa-bootstrap"></i><h4>Bootstrap</h4><p>Database management</p></div>
+     <div class="skill"><i class="fa-brands fa-bootstrap"></i><h4>Bootstrap</h4><p>Mobile-first responsive design</p>
+</div>
 </section>
     <section class="project-section" id="projects">
         <h1 id="projectbtn">Project</h1>
