initial add new file manifest.json & se.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Vansh | Web Developer</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link rel="manifest" href="/Portfolio/manifest.json">
+<meta name="theme-color" content="#000000">
+
 </head>
 
 <body>
@@ -113,6 +116,8 @@
         <p><strong>Email:</strong>vanshverma6065@gmail.com</p>
         <p><strong>Location:</strong> India (Meerut)</p>
         <p><strong>Availability:</strong> Open for Freelance & Projects</p>
+
+
       </div>
 
       <div class="social-icons">
@@ -139,6 +144,9 @@
 
     <footer>
         <p>© 2026 Vansh Verma. All Rights Reserved.</p>
+                <button id="installBtn" class="install-btn" hidden>
+  📲 Install App
+</button>
     </footer>
 </body>
 <script src="../home.js"></script>
