initial add live links for project card

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         <p>
  A collection of interactive JavaScript mini projects showcasing dynamic web features, DOM manipulation, and practical logic, including apps like calculators, to-do lists, and small games for hands-on coding experience.
         </p>
-        <button>Explore JavaScript Work</button>
+        <a href="https://javascript-mini-project.onrender.com" target="_blank">       <button>Explore JavaScript Work</button></a>
+ 
       </div>
       
     </div>
