add cv btn and desgin

--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
   <section class="about-section" id="about">
     <div class="images">
       <img src="https://i.pinimg.com/1200x/be/3d/ba/be3dba31d449f0ba9c00ab8f9e2d603f.jpg" alt="Vansh Web Developer">
+    <!-- <img src="assits/my.png" alt=""> -->
     </div>
 
     <div class="about-content">
       <h2>About Me</h2>
 
       <p>
-        I’m Vansh, a passionate frontend web developer focused on building clean,
-        responsive, and user-friendly web experiences.
+         I'm Vansh, a passion frontend web developer focused on building
       </p>
 
       <p>
-        I work with HTML, CSS, JavaScript, Bootstrap, and React to create modern
-        websites that help individuals and businesses grow online.
+    I’m Vansh, a passionate frontend web developer focused on building clean, responsive, and user-friendly web interfaces.
       </p>
 
       <p>
-        Currently open to freelance projects, collaborations, and job opportunities.
+      Currently, I’m open to freelance projects, collaborations, and entry-level opportunities where I can learn and contribute.
       </p>
 
       <a href="../assits/resume.pdf" class="cv-btn" download>
         <i class="fa-solid fa-download"></i> Download CV
       </a>
+      <a href="" class="cv-btn">Check My CV</a>
     </div>
   </section>
 
