initial add new card for project section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,24 @@
           <a href="https://github.com/vansh-verma-dev/Govt.ITI-College.git" target="_blank"><button class="githubbtn">GitHub</button></a>
         </div>
       </div>
+      <!-- --project-3--- -->
+        <div class="project-section-card">
+        <img src="https://i.pinimg.com/1200x/e1/77/f9/e177f974393c8363ab188abc42311cbc.jpg" alt="" />
+        <h1>JavaScript Mini Projects Collection</h1>
+        <p>A collection of small projects built using Vanilla JavaScript to practice DOM manipulation and UI design.</p>
+        <h2>Features</h2>
+        <p><i class="fa-solid fa-circle"></i> Calculator</p>
+        <p><i class="fa-solid fa-circle"></i> Todo List</p>
+        <p><i class="fa-solid fa-circle"></i> BMI Calculator</p>
+        <h2>Tech: 
+          <span>HTML</span>
+           <span style="background-color: rgb(189, 189, 255);">CSS</span>
+            <span style="background-color: rgb(255, 255, 179);">JAVASCRIPT</span></h2>
+        <div class="btn-group">
+          <a href="https://portfolio-vyj8.onrender.com" target="_blank"><button class="livebtn"> Live Demo</button></a>
+          <a href="https://github.com/vansh-verma-dev/Portfolio.git" target="_blank"><button class="githubbtn">GitHub</button></a>
+        </div>
+      </div>
   </section>
 
  
