add new projecr card add add screenshorts

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
       <!-- --project-3--- -->
         <div class="project-section-card">
-        <img src="https://i.pinimg.com/1200x/e1/77/f9/e177f974393c8363ab188abc42311cbc.jpg" alt="" />
+        <img src="assits/jsbanner.png" alt="" />
         <h1>JavaScript Mini Projects Collection</h1>
         <p>A collection of small projects built using Vanilla JavaScript to practice DOM manipulation and UI design.</p>
         <h2>Features</h2>
