add links for js-mini-projects

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
            <span style="background-color: rgb(189, 189, 255);">CSS</span>
             <span style="background-color: rgb(255, 255, 179);">JAVASCRIPT</span></h2>
         <div class="btn-group">
-          <a href="https://portfolio-vyj8.onrender.com" target="_blank"><button class="livebtn"> Live Demo</button></a>
-          <a href="https://github.com/vansh-verma-dev/Portfolio.git" target="_blank"><button class="githubbtn">GitHub</button></a>
+          <a href="https://javascript-mini-project.onrender.com" target="_blank"><button class="livebtn"> Live Demo</button></a>
+          <a href="https://github.com/vansh-verma-dev/JavaScript-mini-Project.git" target="_blank"><button class="githubbtn">GitHub</button></a>
         </div>
       </div>
   </section>
