initial add cv section name tage

--- a/CV.html
+++ b/CV.html
@@ -47,7 +47,13 @@
         <li>Time Management</li>
         <li>Time Management</li>
       </div>
-      <div class="main"></div>
+      <div class="main">
+<div class="head">
+    <h1>VANSH VERMA</h1>
+ <h3>FULL STACK DEVELOPER</h3>
+</div>
+
+      </div>
     </section>
   </body>
 </html>
