initial add destils section

--- a/CV.html
+++ b/CV.html
@@ -47,12 +47,36 @@
         <li>Time Management</li>
         <li>Time Management</li>
       </div>
+      <!-- ------main-section----- -->
       <div class="main">
-<div class="head">
-    <h1>VANSH VERMA</h1>
- <h3>FULL STACK DEVELOPER</h3>
-</div>
 
+        <!-- --Name section-- -->
+        <div class="head">
+          <h1>VANSH VERMA</h1>
+          <h3>FULL STACK DEVELOPER</h3>
+        </div>
+ 
+        <div class="main-details">
+
+            <!-- ---about me-- -->
+        <h1>ABOUT  ME</h1>
+        <p>I am a dedicated Full Stack Developer focused on building modern, responsive, and scalable web applications. Skilled in frontend development and actively strengthening backend knowledge, I enjoy transforming ideas into functional digital solutions. My hands-on project experience and strong understanding of core web fundamentals allow me to create structured and maintainable applications. I am passionate about continuous improvement, clean coding practices, and contributing value to innovative development teams.</p>
+
+        <!-- ---Education--- -->
+         <h1>EDUCATION</h1>
+         <h2>Bachelor of Arts (Private) - Pursuing</h2>
+         <p>2024 - Present</p>
+         <h2>ITI - Information Technology</h2>
+         <p>2024 - 2026 (Expected Completion: 2026)</p>
+
+         <!-- ---Project--section--- -->
+          <h1>PROJECTS</h1>
+          <h2>Personal Portfolio Website</h2>
+          <p><span>Technologies Used: HTML5, CSS3, JavaScript</span></p>
+          <p><span>Live Demo:</span><a href="#">Live link</a></p>
+          <p><span>GitHub:</span><a href="#">Github link</a></p>
+          <p>Developed a fully responsive personal portfolio website to showcase technical skills, projects, and contact information. Designed modern UI with structured layout using Flexbox and CSS styling techniques. Implemented smooth navigation, clean typography, and optimized performance for better user experience across devices. The project reflects strong understanding of frontend fundamentals and responsive web design principles.</p>
+        </div>
       </div>
     </section>
   </body>
