initial fix bug and responsive desgin add

--- a/CV.html
+++ b/CV.html
@@ -95,4 +95,14 @@
       </div>
     </section>
   </body>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Vansh Verma",
+      "jobTitle": "Web Developer",
+      "email": "vanshverma6065@gmail.com",
+      "url": "https://yourportfolio.com"
+    }
+  </script>
 </html>
