--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div class="title">
       <h1>Hi, I'm Vansh</h1>
       <h1>a Web Developer</h1>
-      <p>
-        Building clean, responsive and user-friendly web experiences.
-      </p>
+    <p>
+  <span id="typing"></span>
+</p>
 
       <a href="#projects"><button>See Projects</button></a> 
       <a href="#hire" id="hirebtn"><button>Let's Work Together</button></a>
@@ -78,7 +78,7 @@
        <a href="assits/resume.pdf" class="cv-btn" download>
         <i class="fa-solid fa-download"></i> Download CV
       </a>
-      <a href="#" class="cv-btn">Check My CV</a>
+      <a href="CV.html" target="_blank" class="cv-btn">Check My CV</a>
      </div>
     </div>
 
@@ -203,9 +203,9 @@
         </div>
 
         <div class="social-icons">
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="https://www.instagram.com/igvanshverma"><i class="fab fa-instagram"></i></a>
+          <a href="https://github.com/vansh-verma-dev" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/public-profile/settings/?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3B2CwW5D59S7%2Bsj9qeERXhhg%3D%3D" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/igvanshverma" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
  
